# moss

./: .clang-format  .gitignore  CMakeLists.txt  README.md  west.yml
.devcontainer/: devcontainer.json
apps/fd/: CMakeLists.txt  Kconfig  Kconfig.capability  prj.conf
apps/fd/boards/: moss.overlay
apps/fd/resources/: CMakeLists.txt  Kconfig  Kconfig.images  images.c  images.ld  resource_load.c  resource_load.h
apps/fd/src/: comp_fd.c  comp_fd.h  display.c  display.h  indicator.c  indicator.h  main.c  screen.c  screen.h
boards/arm/moss/: Kconfig.board  Kconfig.defconfig  board.camke  moss.dts  moss.yaml  moss_defconfig  moss_pinctrl.dtsi
drivers/: CMakeLists.txt  Kconfig
drivers/display/: CMakeLists.txt  Kconfig  Kconfig.st7789v_moss  display_st7789v_moss.c  display_st7789v_moss.h
zephyr/: module.yml
